added notes in code

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,7 +1,18 @@
 button {
   text-decoration: underline;
+  margin-top: 20px;
 
 }
 .highlighted {
   background-color: tomato;
+}
+
+#person {
+  /*background-image: url(http://wallpapercave.com/wp/dF53LEj.png);
+  text-decoration-color: white;*/
+}
+
+.attr {
+
+
 }
