--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,12 +12,14 @@
   <body>
     <h1>Shoutout Carousel</h1>
     <div id = "person">
+      <!-- this keeps the format stable, while span tags allow me to display person info without concatenating the 'name:', etc -->
       <div class = "attr">Name: <span id = "name"></span></div>
       <div class = "attr">Github User Name: <span id = "githubUserName"></span></div>
       <div class = "attr">Shoutout: <span id = "shoutout"></span></div>
     </div>
     <button id = "prev">Previous</button>
     <button id = "next">Next</button>
+    <!-- these are the buttons on the carousel -->
     <nav>
       <button id = "0" class ="carousel"></button>
       <button id = "1" class ="carousel"></button>
